<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activity labels -->
    <string name="app_name">Bike Shop Detector</string>
    <string name="splash_activity">Splash</string>
    <!-- Names of action bar/overflow buttons -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="cancel_button">Cancel</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search a shop</string>
    <!-- Titles of activities -->
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_add_shop_map">Add a shop</string>
    <string name="title_activity_add_shop_form">Form</string>
    <string name="title_activity_all_shops">All shops</string>
    <!-- Warning/Error messages -->
    <string name="gps_is_disabled">You must enable GPS for the application to work.</string>
    <string name="enable_gps">Click to activate GPS.</string>
    <string name="internet_is_disabled">Internet connection is required.</string>
    <string name="enable_internet">Click to turn on mobile data.</string>
    <string name="data_not_fetched">No shops to display</string>
    <string name="no_user_location">No GPS connection</string>
    <string name="api_zero_results">No bike shops in the selected range</string>
    <string name="api_error">An error occurred while retrieving shops</string>
    <string name="map_info_message">Tap the shop to open the navigation menu</string>
    <string name="add_shop_pending">Adding shop...</string>
    <string name="add_shop_finished">Shop added!</string>
    <string name="add_shop_failed">An error occurred. Please try again later.</string>

    <!-- Keys of the metric/imperial screen -->
    <string name="unit_metric_screen">metric_settings</string>
    <string name="unit_imperial_screen">imperial_settings</string>
    <!-- Formatting for Settings/Range preference in metric mode -->
    <string name="pref_range_key">range</string>
    <string name="pref_range_default">3 km</string>
    <string name="pref_range_label">Range</string>

    <!-- Formatting for Settings/Unit preference -->
    <string name="pref_unit_key">unit</string>
    <string name="pref_unit_default_metric">Metric</string>
    <string name="pref_unit_default_imperial">Imperial</string>
    <string name="pref_unit_label">Unit</string>

    <!-- Formatting for Settings/My speed preference in metric mode -->
    <string name="pref_speed_key">speed</string>
    <string name="pref_speed_default_metric">14 km/h</string>
    <string name="pref_speed_label">My average speed</string>
    <!-- Values for the Settings/Range array in metric mode -->
    <string name="range_array_1">1 km</string>
    <string name="range_array_2">2 km</string>
    <string name="range_array_3">3 km</string>
    <string name="range_array_4">4 km</string>
    <string name="range_array_5">5 km</string>
    <string name="range_array_10">10 km</string>

    <!-- Formatting for Settings/My speed preference in imperial mode -->
    <string name="pref_speed_imperial_default">9 mph</string>
    <!-- Formatting for Settings/Range preference in imperial mode -->
    <string name="pref_range_imperial_default">1 mile</string>
    <!-- Values for the Settings/Range array in imperial mode -->
    <string name="range_array_imperial_1">1 mile</string>
    <string name="range_array_imperial_2">2 miles</string>
    <string name="range_array_imperial_3">3 miles</string>
    <string name="range_array_imperial_4">4 miles</string>
    <string name="range_array_imperial_5">5 miles</string>
    <string name="range_array_imperial_10">6 miles</string>

    <!-- Values for the Settings/My speed array in metric mode -->
    <string name="speed_array_0">5 km/h</string>
    <string name="speed_array_1">14 km/h</string>
    <string name="speed_array_2">17 km/h</string>
    <string name="speed_array_3">20 km/h</string>
    <string name="speed_array_4">23 km/h</string>
    <string name="speed_array_5">26 km/h</string>
    <string name="speed_array_6">29 km/h</string>
    <string name="speed_array_7">32 km/h</string>

    <!-- Values for the Settings/My speed array in imperial mode -->
    <string name="speed_array_imperial_0">3 mph</string>
    <string name="speed_array_imperial_1">9 mph</string>
    <string name="speed_array_imperial_2">10 mph</string>
    <string name="speed_array_imperial_3">12 mph</string>
    <string name="speed_array_imperial_4">14 mph</string>
    <string name="speed_array_imperial_5">16 mph</string>
    <string name="speed_array_imperial_6">18 mph</string>
    <string name="speed_array_imperial_7">20 mph</string>

    <!-- Values for the Settings/Unit array -->
    <string name="unit_array_metric">Metric</string>
    <string name="unit_array_imperial">Imperial</string>

    <!-- Formatting for Settings/Notification preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Get notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Disabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Names of slider menu options/headers -->
    <string name="add_a_shop">Add a shop</string>
    <string name="view_all_shops">View all shops</string>
    <string name="about">About</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="website">About us</string>
    <string name="header_slider">Menu</string>
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">waldo.bike.shopsapp</string>
    <string name="content_authority">waldo.bike.bikeshops</string>

    <!-- Used in the AddShopMap activity -->
    <string name="search_location">Search here</string>
    <string name="invalid_address">Invalid address. Please look up a street name.</string>
    <!-- Button names in AddShopMap/ShopDetail activities -->
    <string name="delete_shop_button">Delete</string>
    <string name="next_shop_button">Next--></string>
    <string name="shop_detail_map">Open map</string>
    <string name="open_form">Open form</string>
    <!-- Used in the AddShopFormActivity -->
    <string name="form_title">This submission will be moderated by Google. Complete all fields to increase the chance of acceptance.</string>
    <string name="form_shop_name_title">Shop\'s name (mandatory)</string>
    <string name="form_shop_name">5 characters minimum</string>
    <string name="form_shop_phone_title">Phone number (recommended)</string>
    <string name="form_shop_phone">7 digits minimum</string>
    <string name="form_shop_website_title">Website (recommended)</string>
    <string name="form_shop_website"></string>
    <string name="form_shop_placeholder"></string>
    <string name="empty_shop_name">Please complete the shop\'s name</string>
    <string name="short_shop_name">The shop\'s name is too short</string>
    <string name="long_shop_name">The shop\'s name is too long</string>
    <string name="invalid_url">Invalid website address</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="invalid_form">Please correct the highlighted field(s) below</string>
    <string name="add_shop_button_title">Add shop</string>
    <!-- Warning messages from the Main Activity -->
    <string name="no_internet">No Internet connection</string>
    <string name="internet_connected">Connected</string>
    <string name="internet_is_connecting">Reconnecting...</string>
    <string name="no_gps">GPS is deactivated</string>
    <string name="gps_reactivated">GPS reactivated</string>
    <string name="no_app_available">No installed application to service this request</string>
    <string name="twitter_operation_failed">Twitter operation failed</string>
    <string name="waiting_gps">Waiting for GPS connection...</string>
    <string name="no_shops">No shops in the selected range</string>
    <!-- Keys and IDs -->
    <string name="gmaps_api_key">AIzaSyCHf4BobJQWDa39E_VJtUkwkuimFfsz7Z0</string>
    <string name="facebook_appId">1528344614097187</string>
    <string name="title_activity_shop_detail">ShopDetailActivity</string>
    <string name="title_activity_shop_street_view">ShopStreetViewActivity</string>
    <string name="hello_world">Hello world!</string>

    <!--Used for tracking-->
    <!--Slider Menu actions-->
    <string name="ga_slider_menu_category_id">slider_menu</string>
    <!--View all shops-->
    <string name="ga_view_all_shops_action_id">view_all_shops</string>
    <string name="ga_view_all_shops_label_id">View all shops</string>
    <!--Add a shops-->
    <string name="ga_add_a_shop_action_id">add_a_shops</string>
    <string name="ga_add_a_shop_label_id">Add a shops</string>
    <!--About us-->
    <string name="ga_about_us_action_id">about_us</string>
    <string name="ga_about_us_label_id">About us</string>
    <!--Social media buttons-->
    <string name="ga_socialmedia_cat_id">social_cat_id</string>
    <string name="ga_socialmedia_act_id">social_act_id</string>
    <!--Used in the Shops Fragment class to track the opening of a Shop-->
    <string name="ga_open_shop_category_id">open_shop_cat_id</string>
    <string name="ga_open_shop_action_id">open_shop_act_id</string>

    <!--Used in the Settings activity-->
    <string name="ga_checkbox_category_id">checkbox_cat_id</string>
    <string name="ga_checkbox_action_id">checkbox_act_id</string>
    <string name="title_activity_web">Our website</string>

    <!--Used in the ShopDetail Activity-->
    <string name="ga_shopwebsite_category_id">shopwebsite_cat_id</string>
    <string name="ga_shopwebsite_action_id">shopwebsite_act_id</string>
    <string name="ga_shopnumber_category_id">shopnumber_cat_id</string>
    <string name="ga_shopnumber_action_id">shopnumber_act_id</string>
</resources>
