<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/unit_metric_screen">

    <ListPreference
        android:title="@string/pref_range_label"
        android:summary="@string/pref_range_default"
        android:key="@string/pref_range_key"
        android:defaultValue="@string/pref_range_default"
        android:entries="@array/range_values_array"
        android:entryValues="@array/range_values_array" /> <!--Te the same for the API call as the ones (android:entries) displayed to the user-->


    <ListPreference
        android:title="@string/pref_speed_label"
        android:summary="@string/pref_speed_default_metric"
        android:key="@string/pref_speed_key"
        android:defaultValue="@string/pref_speed_default_metric"
        android:entries="@array/speed_values_array"
        android:entryValues="@array/speed_values_array" />

    <ListPreference
        android:title="@string/pref_unit_label"
        android:summary="@string/pref_unit_default_metric"
        android:key="@string/pref_unit_key"
        android:defaultValue="@string/pref_unit_default_metric"
        android:entries="@array/unit_values_array"
        android:entryValues="@array/unit_values_array" />

    <CheckBoxPreference
        android:id="@+id/checkbox_notifications"
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:onClick="checkBoxClicked"
        android:defaultValue="@string/pref_enable_notifications_default" />

</PreferenceScreen>
